[gd_scene load_steps=15 format=2]

[ext_resource path="res://FightGUI.gd" type="Script" id=1]
[ext_resource path="res://assets/GUI/progress_bar_under.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/progress_bar_green_fill.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/Enemy_buttom.png" type="Texture" id=4]
[ext_resource path="res://assets/GUI/ideas_title.png" type="Texture" id=5]
[ext_resource path="res://assets/Fonts/SF Atarian System.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/GUI/turn_progress_bar.png" type="Texture" id=7]
[ext_resource path="res://assets/GUI/turn_progress_bar_red_fill.png" type="Texture" id=8]
[ext_resource path="res://assets/ready.png" type="Texture" id=9]
[ext_resource path="res://assets/GUI/turn_progress_bar_fill.png" type="Texture" id=10]
[ext_resource path="res://assets/GUI/Player_buttom.png" type="Texture" id=11]
[ext_resource path="res://assets/GUI/Player_button_pressed.png" type="Texture" id=12]
[ext_resource path="res://assets/GUI/progress_bar_red_fill.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]

size = 80
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font/fallback" ]

[node name="Fight" type="HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 720.0
margin_bottom = 962.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
script = ExtResource( 1 )
WIN_POINTS = 100
MAX_TURN_TIME = 5

[node name="PlayerProgress" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 56.0
margin_right = 146.0
margin_bottom = 1016.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 20
custom_constants/margin_top = 50
custom_constants/margin_left = 20
custom_constants/margin_bottom = 50
_sections_unfolded = [ "custom_constants" ]

[node name="TextureProgress" type="TextureProgress" parent="PlayerProgress" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 50.0
margin_right = 70.0
margin_bottom = 966.0
rect_min_size = Vector2( 50, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 1000.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 2 )
texture_over = null
texture_progress = ExtResource( 3 )
fill_mode = 3
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 20
stretch_margin_right = 10
stretch_margin_bottom = 20
_sections_unfolded = [ "Rect", "Textures" ]

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_right = 570.0
margin_bottom = 1016.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="Enemy" type="MarginContainer" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 420.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 50
custom_constants/margin_left = 10
custom_constants/margin_bottom = 50
_sections_unfolded = [ "custom_constants" ]

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Enemy" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 50.0
margin_right = 410.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Enemy/TextureRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 50.0
margin_right = 171.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 6

[node name="PlayerScoreLabel" type="Label" parent="VBoxContainer/Enemy/TextureRect" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 210.0
margin_top = 70.0
margin_right = 354.0
margin_bottom = 151.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="EnemyTurn" type="TextureProgress" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 304.0
margin_right = 420.0
margin_bottom = 354.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 10.0
step = 0.01
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 7 )
texture_over = null
texture_progress = ExtResource( 8 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Textures" ]

[node name="Art" type="MarginContainer" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 358.0
margin_right = 420.0
margin_bottom = 658.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_top = 50
custom_constants/margin_bottom = 50
_sections_unfolded = [ "custom_constants" ]

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/Art" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 50.0
margin_right = 420.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
_sections_unfolded = [ "Textures" ]

[node name="PlayerTurn" type="TextureProgress" parent="VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 662.0
margin_right = 420.0
margin_bottom = 712.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 10.0
step = 0.01
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 7 )
texture_over = null
texture_progress = ExtResource( 10 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Textures" ]

[node name="Player" type="MarginContainer" parent="VBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 716.0
margin_right = 420.0
margin_bottom = 1016.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 50
custom_constants/margin_left = 10
custom_constants/margin_bottom = 50
_sections_unfolded = [ "custom_constants" ]

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/Player" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 50.0
margin_right = 410.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_disabled = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Player/TextureButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 54.0
margin_right = 171.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 6

[node name="PlayerScoreLabel" type="Label" parent="VBoxContainer/Player/TextureButton" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 220.0
margin_top = 64.0
margin_right = 364.0
margin_bottom = 145.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="EnemyProgress" type="MarginContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 574.0
margin_right = 664.0
margin_bottom = 1016.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 20
custom_constants/margin_top = 50
custom_constants/margin_left = 20
custom_constants/margin_bottom = 50
_sections_unfolded = [ "custom_constants" ]

[node name="TextureProgress" type="TextureProgress" parent="EnemyProgress" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 50.0
margin_right = 70.0
margin_bottom = 966.0
rect_min_size = Vector2( 50, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 1000.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 2 )
texture_over = null
texture_progress = ExtResource( 13 )
fill_mode = 2
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 20
stretch_margin_right = 10
stretch_margin_bottom = 20
_sections_unfolded = [ "Radial Fill" ]

[node name="CountdownTimer1" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="CountdownTimer2" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="CountdownTimer3" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="TurnTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="pressed" from="VBoxContainer/Art/TextureButton" to="." method="_on_ReadyButton_pressed"]

[connection signal="pressed" from="VBoxContainer/Player/TextureButton" to="." method="_on_Player_click"]

[connection signal="timeout" from="CountdownTimer1" to="." method="_on_CountdownTimer1_timeout"]

[connection signal="timeout" from="CountdownTimer2" to="." method="_on_CountdownTimer2_timeout"]

[connection signal="timeout" from="CountdownTimer3" to="." method="_on_CountdownTimer3_timeout"]

[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]


